[gd_scene load_steps=3 format=2]

[ext_resource path="res://instructions/AddInstruction.gd" type="Script" id=1]
[ext_resource path="res://instructions/InstructionButton.tscn" type="PackedScene" id=2]

[node name="AddInstruction" type="Area2D"]
script = ExtResource( 1 )

[node name="AddMove" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 24, -18 )

[node name="AddStandBy" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 30, 0 )
color = Color( 0.239216, 0.678431, 0.380392, 1 )

[node name="AddUpgrade" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 24, 18 )
color = Color( 0.192157, 0.376471, 0.588235, 1 )
